changed 3 lines to fix build and run